# sglypa

./: .gitignore  Cargo.toml
src/: main.rs
vods/chillout_latte/: chat00.json  chat01.json  chat02.json  chat03.json  chat04.json  chat05.json  chat06.json  chat07.json
vods/honeyrinder/: chat00.json  chat01.json  chat02.json  chat03.json  chat04.json  chat05.json  chat06.json  chat07.json  chat08.json  chat09.json  chat10.json
vods/red_pondaa/: chat01.json  chat02.json  chat03.json  chat04.json  chat05.json  chat06.json  chat07.json  chat08.json  chat10.json  chat11.json  chat12.json  chat13.json  chat14.json  chat15.json  marathon_chat01.json  marathon_chat02.json  marathon_chat04.json  marathon_chat05.json  marathon_chat06.json  marathon_chat08.json  marathon_chat10.json
vods/toopenya/: chat00.json  chat01.json  chat02.json  chat03.json  chat04.json  chat05.json  chat06.json  chat07.json  chat08.json
