[package]
name = "sglypa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov_strings = "0.1.5"
tokio = { version = "1.33.0", features = ["full"] }
twitch-irc = { version = "5.0.1", features = [] }
