[package]
name = "sglypa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cell = "0.1.8"
chrono = "0.4.31"
env_logger = "0.10.0"
error = "0.1.9"
itertools = "0.11.0"
log = "0.4.20"
markov_strings = "0.1.5"
rand = "0.8.5"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
twitch-irc = { version = "5.0.1", features = [] }
